--- a/public/index.html
+++ b/public/index.html
@@ -143,16 +143,17 @@
             </div>
         </div>
         <div class="row mt-6">
-            <div class="col-md-6 mr-auto">
+            <div class="col-md-6 mr-auto contenido-principal">
                 <h2>Creando el futuro digital.</h2>
-                <p class="mb-5">Soy una mujer apasionada por el aprendizaje constante. Disfruto cada oportunidad para adquirir nuevos conocimientos y habilidades, ya que creo firmemente en el crecimiento personal y profesional.".</p>
-                <div class="row mt-6">
+                <p class="mb-5">Soy una mujer apasionada por el aprendizaje constante. Disfruto cada oportunidad para adquirir nuevos conocimientos y habilidades, ya que creo firmemente en el crecimiento personal y profesional.</p>
+                <div class="row mt-6 botones-cv">
                     <div class="col-md-6 mx-auto text-center">
                         <a href="Curriculum%20Natalie%20Feria.pdf" download class="btn btn-light">
                             Hoja de vida
                         </a>
                     </div>
                 </div>
+            </div>
                 
             </div>
             <div class="col-md-5">
